file rename and minor placeholder content tweaks

--- a/_sass/components/about/_about.scss
+++ b/_sass/components/about/_about.scss
@@ -21,6 +21,7 @@
 
 .about-me__description {
     padding: 1em;
+    padding-right: 14%;
     position: relative;
     float: right;
     width: 64%;
