--- a/_sass/components/header/_menu.scss
+++ b/_sass/components/header/_menu.scss
@@ -1,5 +1,6 @@
 .main-menu {
     background-color: $white;
+    box-shadow: 0 0 10px $blue-dark;
     display: block;
     position: fixed;
     width: 100%;
