--- a/_sass/components/services/_services.scss
+++ b/_sass/components/services/_services.scss
@@ -6,6 +6,7 @@
     display: inline-block;
     padding: 1em;
     text-align: center;
+    vertical-align: top;
     width: 100%;
 
     @include break(md) {
