fav icons and about photos

--- a/_sass/mixins/_typography.scss
+++ b/_sass/mixins/_typography.scss
@@ -3,13 +3,9 @@
  */
 
 @mixin sans-font {
-    font-family: 'Raleway', sans-serif;
+    font-family: $font-sans;
 }
 
 @mixin serif-font {
-    font-family: 'Libre Baskerville', serif;
+    font-family: $font-serif;
 }
-
-// @mixin display-font {
-//     font-family: 'Playfair Display', serif;
-// }
