--- a/_sass/components/components.scss
+++ b/_sass/components/components.scss
@@ -2,3 +2,9 @@
 @import "services/services";
 @import "about/about";
 @import "footer/footer";
+
+
+.four-o-four {
+    font-size: 2rem;
+    text-align: center;
+}
