--- a/_sass/components/header/_hero.scss
+++ b/_sass/components/header/_hero.scss
@@ -1,5 +1,5 @@
 .hero {
-    background-image: url('/img/puzzle_dollar_money.jpg');
+    background-image: url('../img/puzzle_dollar_money.jpg');
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
