--- a/_sass/components/about/_about.scss
+++ b/_sass/components/about/_about.scss
@@ -19,7 +19,7 @@
 }
 
 .about-us__photo {
-    background-image: url('/img/Terry-Tidd-l.png');
+    background-image: url('../img/Terry-Tidd-l.png');
     background-position: top center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -28,7 +28,7 @@
     position: relative;
 
     @include break(md) {
-        background-image: url('/img/Terry-Tidd.png');
+        background-image: url('../img/Terry-Tidd.png');
         height: 100%;
         position: absolute;
         width: 30%;
