--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,6 +30,7 @@
 	<meta name="msapplication-TileColor" content="#ffffff">
 	<meta name="msapplication-TileImage" content="/favicon/ms-icon-144x144.png">
 	<meta name="theme-color" content="#ffffff">
+
 	<!--analytics-->
 	<script>
 	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -39,7 +40,6 @@
 
 	  ga('create', 'UA-83361565-1', 'auto');
 	  ga('send', 'pageview');
-
 	</script>
 </head>
 <body>
@@ -70,6 +70,16 @@
 						</a>
 					</li>
 					<li class="main-menu__navigation-item">
+						<a href="#retirement">
+							Retirement
+						</a>
+					</li>
+					<li class="main-menu__navigation-item">
+						<a href="#keys">
+							Keys
+						</a>
+					</li>
+					<li class="main-menu__navigation-item">
 						<a href="#about">
 							About Us
 						</a>
@@ -97,9 +107,15 @@
 	<footer class="footer">
 		<div class="container">
 			<div class="footer__copyright">
-				Copyright 2016 by Tidd Financial, INC. All Rights Reserved.
+				Copyright <span id="copyright"> {{ 'now' | date: "%Y" }} </span> by Tidd Financial, INC. All Rights Reserved.
 			</div>
 		</div>
 	</footer>
 </body>
+
+<script type="text/javascript">
+  document.getElementById('copyright').innerHTML = `© ${(new
+  Date()).getUTCFullYear()}`
+</script>
+
 </html>
