hero: change height to be larger

--- a/_sass/components/header/_hero.scss
+++ b/_sass/components/header/_hero.scss
@@ -3,7 +3,7 @@
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    min-height: 350px;
+    min-height: 50vmin;
     position: relative;
     width: 100%;
 
