column cards: add new component

--- a/_sass/components/components.scss
+++ b/_sass/components/components.scss
@@ -1,7 +1,9 @@
-@import "header/header";
-@import "services/services";
-@import "about/about";
-@import "footer/footer";
+@import
+"header/header",
+"services/services",
+"about/about",
+"column-cards",
+"footer/footer";
 
 
 .four-o-four {
