site house cleaning: clean up headers and typography

--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -10,3 +10,14 @@
        width: $tablet-width;
    }
 }
+
+.retirement {
+  background-color: rgba($gray-light, 0.5);
+  padding: 1rem 0 0;
+}
+
+.section-title {
+  color: $blue-dark;
+  margin-bottom: 1em;
+  text-align: center;
+}
