--- a/_sass/typography.scss
+++ b/_sass/typography.scss
@@ -15,21 +15,21 @@ h1 {
 
 h2 {
     color: $white;
-    font-size: 35px;
+    font-size: 2rem;
     line-height: 1.5em;
 
     @include break(md) {
-        font-size: 45px;
+        font-size: 2.5rem;
     }
 }
 
 h3 {
     color: $blue-bright;
-    font-size: 26px;
+    font-size: 1.625rem;
 }
 
 h4 {
-    font-size: 20px;
+    font-size: 1.25rem;
     padding-top: .5em;
 }
 
@@ -41,9 +41,15 @@ h4 {
     @include sans-font;
 }
 
-p {
+p,
+ul,
+ol {
     @include sans-font;
-    line-height: 3ex;
+    line-height: 1.5;
+}
+
+li {
+    margin-bottom: 0.5em;
 }
 
 a {
